--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.17.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
-  },
-  "dependencies": {
+},
+"dependencies": {
+    "express": "^4.17.3",
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
+    "faker": "^5.5.3",
     "joi": "^17.6.0"
   },
   "engines":{
