--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
-},
-"dependencies": {
-    "express": "^4.17.3",
+  },
+  "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
+    "express": "^4.17.3",
     "faker": "^5.5.3",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "pg": "^8.7.3"
   },
-  "engines":{
-      "node": "14.x"
+  "engines": {
+    "node": "14.x"
   }
 }
